src/index.css
/* ... */
.figure.is-code > .figure-body > pre::-webkit-scrollbar {
  inline-size: calc(var(--basic-border-radius) * 2);
  block-size: calc(var(--basic-border-radius) * 2);
}

.figure.is-code > .figure-body > pre::-webkit-scrollbar-thumb {
  background-clip: padding-box;
  background-color: var(--gray-6);
  border: 2px solid transparent;
  border-radius: var(--basic-border-radius);
}

.figure.is-code > .figure-body > pre > code {
  display: contents;
  all: unset;
}

/* Blockquote  {{{3 */

.figure.is-blockquote > .figure-body > blockquote {
  --blockquote-symbol-color: var(--red-6);
  --blockquote-symbol-size: 2.5rem;
  --blockquote-border-color: var(--red-5);
  --blockquote-background-color: var(--red-2);
  position: relative;
  margin-block-end: 0;
  padding: var(--line-feed);
  background-color: var(--blockquote-background-color);
  background-image: linear-gradient(var(--blockquote-border-color), var(--blockquote-border-color)),
                    linear-gradient(var(--blockquote-border-color), var(--blockquote-border-color)),
                    linear-gradient(var(--blockquote-border-color), var(--blockquote-border-color)),
                    linear-gradient(var(--blockquote-border-color), var(--blockquote-border-color));
  background-position: top left, top right, bottom left, bottom right;
  background-size: var(--line-feed) 1px,
                   calc(100% - var(--line-feed) - var(--blockquote-symbol-size)) 1px,
                   calc(100% - var(--line-feed) - var(--blockquote-symbol-size)) 1px,
                   var(--line-feed) 1px;
  background-repeat: no-repeat;
}

.figure.is-blockquote > .figure-body > blockquote::before,
.figure.is-blockquote > .figure-body > blockquote::after {
  position: absolute;
  inline-size: var(--blockquote-symbol-size);
  box-sizing: border-box;
  color: var(--blockquote-symbol-color);
  font-size: var(--blockquote-symbol-size);
  font-weight: bold;
  line-height: 1;
  text-align: center;
}

.figure.is-blockquote > .figure-body > blockquote::before {
  content: '\201c';
  inset-block-start: 0;
  inset-inline-start: var(--line-feed);
  transform: translateY(-25%);
}

.figure.is-blockquote > .figure-body > blockquote::after {
  content: '\201d';
  inset-block-end: 0;
  inset-inline-end: var(--line-feed);
  transform: translateY(75%);
}

.figure.is-blockquote > .figure-body > blockquote > :last-child {
  margin-block-end: 0;
}

/* Table/HTML  {{{3 */

.figure.is-table {
  counter-increment: table-count;
}

.figure.is-table > .figure-caption::before {
  content: 'Table ' counter(table-count) '. ';
}

.figure:is(.is-table, .is-html) > .figure-body > table {
  max-inline-size: 100%;
  margin-block-end: 0;
  margin-inline: auto;
  font-size: var(--font-size-small);
}

.figure:is(.is-table, .is-html) > .figure-body > table > tr > :is(td, th),
.figure:is(.is-table, .is-html) > .figure-body > table > :is(tbody, thead, tfoot) > tr > :is(td, th) {
  padding-block: calc(var(--line-feed) / 4);
  padding-inline: 1ch;
  border: 0 solid var(--gray-10);
}

.figure:is(.is-table, .is-html) > .figure-body > table > tr > th,
.figure:is(.is-table, .is-html) > .figure-body > table > :is(tbody, thead, tfoot) > tr > th {
  vertical-align: bottom;
}

.figure:is(.is-table, .is-html) > .figure-body > table > tr > td,
.figure:is(.is-table, .is-html) > .figure-body > table > :is(tbody, thead, tfoot) > tr > td {
  vertical-align: top;
}

.figure:is(.is-table, .is-html) > .figure-body > table > thead > tr > :is(td, th) {
  padding-block-end: calc(var(--line-feed) / 4 - 2px);
  border-block-end-width: 2px;
}

.figure:is(.is-table, .is-html) > .figure-body > table > tr > :is(td, th),
.figure:is(.is-table, .is-html) > .figure-body > table > tbody > tr > :is(td, th) {
  padding-block-end: calc(var(--line-feed) / 4 - 1px);
  border-block-end-width: 1px;
}

.figure:is(.is-table, .is-html) > .figure-body > table > tfoot > tr > :is(td, th) {
  padding-block-start: calc(var(--line-feed) / 4 - 2px);
  border-block-start-width: 2px;
}

/* Image/HTML  {{{3 */

.figure:is(.is-image, .is-html) {
  font-family: var(--font-display);
  counter-increment: figure-count;
}

.figure:is(.is-image, .is-html) > .figure-caption::before {
  content: 'Figure ' counter(figure-count) '. ';
}

.figure:is(.is-image, .is-html) > .figure-body > :is(img, svg),
.figure:is(.is-image, .is-html) > .figure-body > a > :is(img, svg) {
  display: block;
  margin-inline: auto;
  block-size: auto;
  max-inline-size: 100%;
}

/* .footnote  {{{2 */

.footnote {
  display: flex;
  margin-block: 0 var(--line-feed);
  font-family: var(--font-display);
  font-size: var(--font-size-small);
}

.footnote:has(+ .footnote) {
  margin-block-end: 0;
}

.footnote-label {
  flex-shrink: 0;
  flex-basis: calc(var(--line-feed) * 1.5);
  box-sizing: border-box;
  text-align: end;
  font-variant-numeric: tabular-nums;
}

.footnote-label::after {
  content: ' ';
  white-space: pre;
}

a.footnote-back-reference {
  text-decoration: none;
}

.footnote-body {
  flex: 1 1;
}

.footnote-body > :last-child {
  margin-block-end: 0;
}

/* .icon  {{{2 */

.icon {
  fill: var(--icon-color, currentColor);
  width: 1.5rem;
  height: 1.5rem;
}

/* .inline-list  {{{2 */

.inline-list {
  display: flex;
  flex-wrap: wrap;
  list-style: none;
  padding: 0;
}

.inline-list.is-vertical {
  writing-mode: vertical-rl;
}

.inline-list.is-center {
  justify-content: center;
}

.inline-list.is-spaced-small {
  column-gap: 0.5ch;
}

.inline-list.is-spaced-medium {
  column-gap: 1ch;
}

.inline-list.is-spaced-large {
  column-gap: 1.5ch;
}

:where(.inline-list.is-separated) > .inline-list-item + .inline-list-item::before {
  content: '·';
  color: var(--gray-7);
  margin-inline: 0.5ch;
}

.inline-list-separator {
  align-self: center;
  inline-size: 1px;
  block-size: calc(var(--line-feed) - 2px);
  margin-inline: 0.5ch;
  background-color: var(--gray-5);
  background-clip: content-box;
}
/* ... */

